# HomePilot

./: .env.example  .env.local.example  .gitattributes  .gitignore  API.md  CONTAINER.md  DEPLOYMENT.md  DESKTOP.md  DEVELOPMENT.md  FIXES_SUMMARY.md  GROK_IMAGINE_GUIDE.md  MOBILE.md  MODEL_INSTALLATION.md  Makefile  Makefile.personas  PATHS_ANALYSIS.md  PLAN.md  QUICKSTART.md  README.md  STRUCTURE.md  TODO-EXTERNAL.md  TODO.md  changes.patch  docker-compose.mcp.yml  docker-compose.yml  mcp-context-forge-analysis.md  package-lock.json  package.json  plan.md  requirements.txt  start-test.sh  tsconfig.base.json  turbo.json  upgrade_patch.sh
avatar-service/: .env.example  Dockerfile  README.md  pyproject.toml
avatar-service/app/: __init__.py  config.py  main.py  quickface_router.py  router.py  schemas.py
avatar-service/app/storage/: __init__.py  local_store.py
avatar-service/app/stylegan/: __init__.py  generator.py  loader.py  postprocess.py
avatar-service/scripts/: download_models.py  run_dev.sh
avatar-service/tests/: conftest.py  test_stylegan_wiring.py
backend/: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-essay.txt  requirements.txt
backend/app/: MODEL_CATALOG_README.md  __init__.py  agent_chat.py  agent_routes.py  api_keys.py  asset_registry.py  auth.py  background.py  capabilities.py  civitai.py  cloud_tokens.py  comfy.py  community.py  config.py  defaults.py  edit_flags.py  edit_models.py  enhance.py  face_restore.py  face_swap.py  files.py  game_mode.py  image_presets.json  inventory.py  jobs.py  llm.py  logs_api.py  ltm.py  ltm_v1_maintenance.py  ltm_v1_policy.py  main.py  media.py  media_resolver.py  memory_v2.py  migrations.py  mirror_proxy.py  model_catalog.py  model_catalog_data.json  model_config.py  multimodal.py  (+35 more)
backend/app/agentic/: __init__.py  capabilities.py  catalog.py  catalog_service.py  catalog_types.py  client.py  client.py.rej  forge_http.py  list_forge_inventory.py  mcp_installer.py  mcp_uninstaller.py  policy.py  routes.py  routes.py.rej  runtime_tool_router.py  server_config.py  server_manager.py  suite_manifest.py  sync_service.py  tool_policy.py  ttl_cache.py  types.py
backend/app/avatar/: __init__.py  audit.py  availability.py  capabilities.py  config.py  hybrid_prompt.py  hybrid_router.py  hybrid_schemas.py  hybrid_service.py  licensing.py  orientation_fix.py  outfit.py  placeholder.py  router.py  schemas.py  service.py  storage.py
backend/app/comfy_utils/: __init__.py  node_aliases.py  object_info_cache.py
backend/app/compute/: __init__.py  base.py  local.py  ollabridge_cloud.py  routes.py
backend/app/embodiment/: __init__.py  motion_dsl.py  planner.py
backend/app/interactive/: __init__.py  auth.py  config.py  errors.py  llm_router.py  media_router.py  models.py  repo.py  router.py  store.py
backend/app/langgraph_personas/: __init__.py  embodiment_prompt.py  graph_builder.py  persona_graph_routes.py  state.py
backend/app/marketplace/: __init__.py  matrixhub_client.py  normalize.py  routes.py  service.py  settings.py  types.py
backend/app/models/: __init__.py  lora_loader.py  lora_registry.py  lora_routes.py  lora_runtime.py
backend/app/persona_call/: __init__.py  backchannel.py  closing.py  config.py  context.py  directive.py  facets.py  latency.py  openings.py  repeat.py  router.py  state.py  store.py
backend/app/persona_runtime/: __init__.py  manager.py
backend/app/personalities/: __init__.py  memory.py  prompt_builder.py  registry.py  tools.py  types.py
backend/app/personas/: __init__.py  avatar_assets.py  avatar_generator.py  avatar_history.py  dependency_checker.py  export_import.py
backend/app/scripts/: __init__.py  restore_avatars.py
backend/app/services/: __init__.py
backend/app/studio/: __init__.py  alignment.py  audit.py  bundles.py  essay_import.py  exporter.py  exports_repo.py  library.py  model_manager.py  models.py  motion_graphics.py  mp4_renderer.py  policy.py  presets.py  prompt_refinement.py  render_jobs.py  render_mp4.py  render_runner.py  repo.py  routes.py  service.py  story_genres.py
backend/app/teams/: __init__.py  bridge_routes.py  continuation.py  crew_engine.py  crew_profiles.py  crew_runner.py  crewai_engine.py  crewai_llm.py  crewai_outputs.py  federation_agent.py  intent.py  llm_adapter.py  locks.py  meeting_engine.py  orchestrator.py  participants_resolver.py  play_mode.py  rooms.py  routes.py
backend/app/voice/: __init__.py  providers.py  routes.py  session.py
backend/app/voice_call/: __init__.py  barge_in.py  config.py  ingress_bridge.py  models.py  policy.py  router.py  service.py  store.py  turn.py  turn_stream.py  ws.py
backend/migrations/: 001_command_center.sql  002_asset_registry.sql
backend/scripts/: interactive_smoke.py
backend/tests/: check_topology_local.py  conftest.py  test_agentic.py  test_agentic_health.py  test_angel_avatar_pipeline.py  test_api_comprehensive.py  test_auth_smoke.py  test_avatar_models.py  test_background.py  test_catalog_service.py  test_chat_basic.py  test_chat_imagine.py  test_chat_provider_ollama.py  test_civitai.py  test_cloud_tokens.py  test_comfy_node_preflight.py  test_community_gallery.py  test_compute_burst.py  test_compute_provider.py  test_crew_engine.py  test_crew_ollama_integration.py  test_crewai_integration.py  test_enhance.py  test_essay_pipeline.py  test_face_restore.py  test_federated_auth.py  test_health.py  test_hybrid_face.py  test_hybrid_fullbody.py  test_imagine_reference.py  test_interactive_auto_generate_route.py  test_interactive_auto_generate_stream.py  test_interactive_autogen.py  test_interactive_autogen_workflow.py  test_interactive_autoplan.py  test_interactive_autoplan_workflow.py  test_interactive_batch1_scaffolding.py  test_interactive_batch2_datamodel.py  test_interactive_batch3_policy.py  test_interactive_batch4_planner_branching.py  (+85 more)
edit-session/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
edit-session/app/: __init__.py  config.py  health.py  homepilot_client.py  main.py  models.py  security.py  store.py  utils_images.py
(+1791 files in other folders)
