[project]
name = "homepilot-avatar-service"
version = "0.1.0"
description = "Optional microservice for StyleGAN random face generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
]

[tool.uvicorn]
factory = false
