[project]
name = "homepilot-avatar-service"
version = "0.2.0"
description = "Optional microservice for StyleGAN random face generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
# GPU dependencies for real StyleGAN2 inference.
# Install with: pip install '.[gpu]'
# Not required for placeholder mode (default).
gpu = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
]

[tool.uvicorn]
factory = false
