# homepilot/backend/pyproject.toml

[project]
name = "homepilot-backend"
version = "0.1.0"
description = "HomePilot backend orchestrator (FastAPI) for chat + images + video."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "HomePilot" }]

dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.7.4",
  "httpx==0.27.0",
  "requests==2.32.3",
  "python-multipart==0.0.9",
  "starlette==0.37.2",
  "chromadb>=0.4.0",
  "PyPDF2>=3.0.0",
]

[dependency-groups]
dev = [
  "pytest==8.2.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-requests",
]

[project.scripts]
dev = "app.scripts:dev"
test = "app.scripts:test"

[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# Optional: helps on WSL / cross-filesystems; can be overridden by env var UV_LINK_MODE=copy
link-mode = "copy"
