# homepilot/edit-session/pyproject.toml

[project]
name = "homepilot-edit-session"
version = "0.1.0"
description = "HomePilot edit-session sidecar service for natural language image editing."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "HomePilot" }]

dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.30.6",
  "httpx==0.27.2",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "python-multipart==0.0.9",
  "Pillow==10.4.0",
  # Optional Redis store
  "redis==5.0.8",
]

[dependency-groups]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# Optional: helps on WSL / cross-filesystems; can be overridden by env var UV_LINK_MODE=copy
link-mode = "copy"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["app/tests"]
