[project]
name = "homepilot-mcp-google-calendar"
version = "0.1.0"
description = "HomePilot MCP server: Google Calendar — read events, plan meetings, optionally create events"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "google-auth>=2.0",
  "google-auth-oauthlib>=1.0",
  "google-api-python-client>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
