[project]
name = "homepilot-mcp-microsoft-graph"
version = "0.1.0"
description = "HomePilot MCP server: Microsoft Graph — Outlook mail, calendar via MS Graph API"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "msal>=1.24",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
