[project]
name = "homepilot-mcp-personal-assistant"
version = "0.1.0"
description = "HomePilot MCP server: Personal Assistant Tools (reference implementation)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
]

[tool.uvicorn]
factory = false
