[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hp-community-greeter"
version = "1.0.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "httpx>=0.24",
]

[tool.setuptools.packages.find]
include = ["mcp_server*"]
exclude = ["tests*", "persona*", "forge*"]
